<resources>
    <string name="app_name">Kioku</string>

    <string name="select_button_enable">Enter Select Mode</string>
    <string name="select_button_disable">Exit Select Mode</string>
    <string name="save_button">Save</string>
    <string name="create_button">Learn</string>
    <string name="search_button">Search</string>
    <string name="study_button">Study</string>
    <string name="browse_button">Browse</string>
    <string name="home_button">Home</string>
    <string name="edit_button">Edit</string>
    <string name="forget_button">Delete</string>
    <string name="go_button">Go</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_word_search">Search</string>
    <string name="title_activity_word_search_results">Search results</string>
    <string name="title_activity_word_study">Study</string>
    <string name="title_activity_word_browse">Words</string>
    <string name="title_activity_word_view">Word View</string>
    <string name="title_activity_word_edit">Word Edit</string>
    <string name="title_activity_word_information_test">Word Information Test</string>



    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_vibrate">Vibrate</string>
    <string name="pref_notifications_vibrate_summ">Toggle vibration for notifications</string>


    <string name="pref_account_title">Account</string>

    <string name="pref_dev_title">Advanced</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_languages_title">Languages</string>
    <string name="title_activity_language_settings">Language</string>
    <string name="manage_word_information_sources">Manage your sources</string>
    <string name="word_information_sources_title">Sources</string>
    <string name="title_word_information_sources_settings">Sources</string>
    <string name="title_word_information_sources_settings_edit_mode">Drag to reorder</string>
    <string name="title_activity_add_language">Kioku</string>
    <string name="add_sources_hint">Add sources using the plus button in the top right corner.</string>
    <string name="spinner_add_language">+ Add language</string>
    <string name="tag_information_type">information_type</string>
    <string name="tutorial_extra1">1. You will be asked to add some <i>sources</i> to use search. These are the websites you will get your information from.</string>
    <string name="tutorial_extra2">2. Kioku schedules word tests for you using a <i>spaced repetition</i> algorithm. Aim to complete all your scheduled tests every day to ensure you don\'t forget your words.</string>
    <string name="tutorial_extra3">3. This is a <b>beta</b> release. Please report any crashes or problems you have to the developer at <b>kioku.cthorne.me</b>.</string>
    <string name="pref_help_title">Help</string>

    <string name="quad_test_hint_front">Try and remember the answer to this test.\nTap anywhere on the screen to check your answer.</string>
    <string name="quad_test_hint_back">Swipe up if you got the answer.\nSwipe down if you did not.</string>
    <string name="match_test_hint">Swipe left/right to find the correct answer.\nPress the blue button when you\'re done.</string>
    <string name="tutorial_final_hint">You should now understand Kioku\'s 4 step process: <i>search</i>, <i>select</i>, <i>save</i>, <i>study</i>. Tap anywhere to finish the tutorial and start exploring!</string>
    <string name="login_auth_error">Failed to authenticate. Please try again.</string>
    <string name="registration_invalid_email_error">Please enter a valid email address</string>
    <string name="registration_password_too_short_error">Password must be at least %1$d characters</string>
    <string name="add_languages_none_selected_error">Please select at least one language</string>
    <string name="search_no_sources_error">You need at least one source to use search</string>
    <string name="action_settings">Settings</string>

</resources>
