<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="26dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="A few more things..." />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="20dp"
                    android:text="@string/tutorial_extra1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="20dp"
                    android:text="@string/tutorial_extra2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="20dp"
                    android:text="@string/tutorial_extra3" />

                <Button
                    android:id="@+id/got_it_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:text="Got it" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>